Fix game / chat input overlap

--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -71,9 +71,12 @@ input {
     padding: 0.75rem;
     border-radius: 0.25rem;
 }
-button:hover , input:focus {
+button:hover, input:focus {
     background: var(--text-main);
     color: var(--bg-front);
+}
+button:focus, input:focus {
+    outline: 2px solid var(--text-main);
 }
 button:disabled {
     background: inherit;
